SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetUserAttribute"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetUserAttribute", ExactSpelling = true)]
    public static extern SlangReflectionUserAttribute* ReflectionType_GetUserAttribute(SlangReflectionType* type, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_FindUserAttributeByName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_FindUserAttributeByName", ExactSpelling = true)]
    public static extern SlangReflectionUserAttribute* ReflectionType_FindUserAttributeByName(SlangReflectionType* type, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetFieldCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetFieldCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionType_GetFieldCount(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetFieldByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetFieldByIndex", ExactSpelling = true)]
    public static extern SlangReflectionVariable* ReflectionType_GetFieldByIndex(SlangReflectionType* type, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetElementCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetElementCount", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionType_GetElementCount(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetElementType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetElementType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionType_GetElementType(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetRowCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetRowCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionType_GetRowCount(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetColumnCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetColumnCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionType_GetColumnCount(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetScalarType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetScalarType", ExactSpelling = true)]
    public static extern SlangScalarType ReflectionType_GetScalarType(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetResourceShape"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetResourceShape", ExactSpelling = true)]
    public static extern SlangResourceShape ReflectionType_GetResourceShape(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetResourceAccess"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetResourceAccess", ExactSpelling = true)]
    public static extern SlangResourceAccess ReflectionType_GetResourceAccess(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetResourceResultType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetResourceResultType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionType_GetResourceResultType(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionType_GetName(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionTypeLayout_GetType(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getKind"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getKind", ExactSpelling = true)]
    public static extern SlangTypeKind ReflectionTypeLayout_getKind(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetSize"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetSize", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionTypeLayout_GetSize(SlangReflectionTypeLayout* type, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetStride"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetStride", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionTypeLayout_GetStride(SlangReflectionTypeLayout* type, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getAlignment"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getAlignment", ExactSpelling = true)]
    [return: NativeTypeName("int32_t")]
    public static extern int ReflectionTypeLayout_getAlignment(SlangReflectionTypeLayout* type, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetFieldByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetFieldByIndex", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_GetFieldByIndex(SlangReflectionTypeLayout* type, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_findFieldIndexByName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_findFieldIndexByName", ExactSpelling = true)]
    [return: NativeTypeName("SlangInt")]
    public static extern long ReflectionTypeLayout_findFieldIndexByName(SlangReflectionTypeLayout* typeLayout, [NativeTypeName("const char *")] sbyte* nameBegin, [NativeTypeName("const char *")] sbyte* nameEnd);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetExplicitCounter"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetExplicitCounter", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_GetExplicitCounter(SlangReflectionTypeLayout* typeLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetElementStride"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetElementStride", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr ReflectionTypeLayout_GetElementStride(SlangReflectionTypeLayout* type, SlangParameterCategory category);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetElementTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetElementTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* ReflectionTypeLayout_GetElementTypeLayout(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetElementVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetElementVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_GetElementVarLayout(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getContainerVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getContainerVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* ReflectionTypeLayout_getContainerVarLayout(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetParameterCategory"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetParameterCategory", ExactSpelling = true)]
    public static extern SlangParameterCategory ReflectionTypeLayout_GetParameterCategory(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetCategoryCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetCategoryCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionTypeLayout_GetCategoryCount(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetCategoryByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetCategoryByIndex", ExactSpelling = true)]
    public static extern SlangParameterCategory ReflectionTypeLayout_GetCategoryByIndex(SlangReflectionTypeLayout* type, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_GetMatrixLayoutMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_GetMatrixLayoutMode", ExactSpelling = true)]
    public static extern SlangMatrixLayoutMode ReflectionTypeLayout_GetMatrixLayoutMode(SlangReflectionTypeLayout* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeLayout_getGenericParamIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeLayout_getGenericParamIndex", ExactSpelling = true)]
    public static extern int ReflectionTypeLayout_getGenericParamIndex(SlangReflectionTypeLayout* type);
